Added contact form validation

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,4 +1,5 @@
 <div class="about-page-main" id="about-page-main">
+  
   <div class="page-content-intro-hr">background</div>
 
   <div class="about-content">
@@ -51,7 +52,7 @@
           and dedication to creating exceptional user experiences.
         </p>
         <div class="btn-container">
-          <div name="explore" class="explore">
+          <div name="explore" class="explore" (click)="redirectToProjects()">
             explore projects
           </div>
         </div>
