--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -21,11 +21,11 @@
             </p>
           </div>
           <div class="project-views">
-            <span class="view git-view">
+            <span class="view git-view" (click)="redirectToGitHubRepo() ">
               <i class="bi bi-github"></i>
               GitHub
             </span>
-            <span class="view online-view">
+            <span class="view online-view" (click)="redirectToDemo()">
               <i class="bi bi-box-arrow-up-right"></i>
               Online
             </span>
