--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -65,7 +65,7 @@
         <span class="skill"><i class="bi bi-stop-fill"></i> Git bash</span>
       </div>
       <div class="btn-container">
-        <div name="explore" class="explore">explore projects</div>
+        <div name="explore" class="explore" (click)="redirectToProjects()">explore projects</div>
       </div>
     </div>
   </div>
