--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -1,18 +1,18 @@
 <div id="site-identity" class="site-identity">
-  <div class="site-names">
+
+  <div class="site-names" (click)="redirectToHome()">
+
     <div class="site-logo">
       <img src="./img/site-logo/logo.png" alt="Site Logo" />
     </div>
-
     <div class="site-title-and-description">
       <div class="site-title">
         <div class="title-name"><h1>PORTFOLIO</h1></div>
         <div class="site-theme"><i class="bi bi-circle-half"></i></div>
       </div>
-
-      <p class="site-description">Front-End Developer</p>
-      
+      <p class="site-description"> Front-End Developer (Angular)</p>
     </div>
+
   </div>
 
   <div class="site-contact-details">
@@ -34,7 +34,9 @@
       </div>
 
       <div class="site-contact-text theme-button">
-        <div class="site-theme contact-icon"><i class="bi bi-circle-half"></i></div>
+        <div class="site-theme contact-icon">
+          <i class="bi bi-circle-half"></i>
+        </div>
       </div>
 
     </div>
