--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -31,6 +31,9 @@ $light-tertiary-bg-color: #778da9;
 $comp-default-font-color: #9b2226;
 $light-dark-bg-color: #284b63;
 
+/* -- MISC COLORS -- */
+$error-color: red;
+
 /* -- SPACING SIZES -- */
 $spacing-xs: 6px;
 $spacing-sm: 10px;
