--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,15 +6,13 @@
     grid-template-columns: 1fr 2fr;
     justify-content: space-between;
     padding: 10px 0;
-    // border: 1px solid #e5e5e5;
     text-align: left;
     margin-bottom: -18px;
 
     .site-names {
-
         display: flex;
         flex-direction: row;
-        //  border: 1px solid #e5e5e5;
+        cursor: pointer;
 
         .site-logo {
             margin-right: 15px;
@@ -34,8 +32,10 @@
             margin-left: 10px;
 
             .site-title {
+                font-size: $font-size-lg;
                 .site-theme {
                     display: none;
+                    cursor: pointer;                   
                 }
             }
 
@@ -59,7 +59,6 @@
                 font-size: $font-size-md;
 
                 .contact-icon {
-
                     margin-right: $spacing-xs + 1px;
                 }
 
@@ -67,8 +66,12 @@
                     text-decoration: none;
                     color: $light-default-font-color;
                 }
-            }
 
+                &.theme-button {
+                    cursor: pointer;
+                }
+
+            }
         }
 
         .current-weather {
@@ -77,9 +80,7 @@
     }
 
     //Media queries for responsive design
-
     @include respond-to("xs") {
-
         margin: -5px 0;
     }
 
@@ -115,6 +116,7 @@
                     .site-theme {
                         display: block;
                         font-size: $font-size-lg;
+                        cursor: pointer;
                         // border: 1px solid #e5e5e5;
                     }
                 }
@@ -126,8 +128,6 @@
         }
 
         .site-contact-details {
-
-
             display: none;
             // display: grid;
             // grid-template-columns: 2fr 1fr;
@@ -161,5 +161,4 @@
             flex-direction: column;
         }
     }
-
 }
