--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -72,7 +72,7 @@
                         text-transform: uppercase;
                         padding: $spacing-xs;
                         background-color: red;
-                        margin: $spacing-sm $spacing-lg 0 ;
+                        margin: $spacing-md 15% 0 ;
                         border-radius: $spacing-xs;
                         color: $light-neutral-font-color;
                     }
