--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -96,7 +96,7 @@
                     text-transform: uppercase;
                     padding: $spacing-xs;
                     background-color: red;
-                    margin: $spacing-md $spacing-lg 0;
+                     margin: $spacing-lg 15% 0 ;
                     border-radius: $spacing-xs;
                     color: $light-neutral-font-color;
                 }
