--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="home-page-main" class="home-page-main">
 
-  <div class="homepage-content-section cards-container">
+  <div class="homepage-content-section cards-container " (click)=" redirectToProjects() " >
     <div class="card card-ui">
       <div class="card-icon">
         <i class="bi bi-code-slash"></i>
@@ -17,7 +17,7 @@
         <i class="bi bi-plug"></i>
       </div>
       <div class="card-title">restful api</div>
-      <div class="card-description">Fast and Real-time data synchronization.</div>
+      <div class="card-description">Fast and Real-time data sync.</div>
       <div class="card-button">
         <button name="explore-2" class="explore" type="button">explore</button>
       </div>
@@ -56,12 +56,12 @@
       </div>
 
       <div class="recent-project-details">
-        <div class="recent-project-img">
+        <div class="recent-project-img" (click)=" redirectToProjects() ">
           <img
             class="project-img"
             src="./img/projects/prj-mbg.png"
             alt="recent project"
-            title="View Site"
+            title="More details"
           />
         </div>
 
@@ -74,17 +74,20 @@
               SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
             </div>
 
-            <div class="online-options">
-              <div class="online git-hub-repo">
+            <div class="online-options" >
+
+              <div class="online git-hub-repo" (click)="redirectToGitHubRepo()">
                 <i class="bi bi-github"></i> GitHub
               </div>
 
-              <div class="online more">
+              <div class="online more" (click)="redirectToProjects()" >
                 <i class="bi bi-bookmark"></i> Details
               </div>
-              <div class="online live-site">
+
+              <div class="online live-site" (click)=" redirectToDemo()">
                 <i class="bi bi-box-arrow-up-right"></i> Online
               </div>
+
             </div>
           </div>
         </div>
@@ -96,7 +99,7 @@
       <div class="feed-title">news headlines</div>
 
       <div class="weather-container">
-        <span class="weather-item title">Weather: </span>
+        <!-- <span class="weather-item title">Weather: </span> -->
         <span class="weather-item"
           ><i class="bi bi-calendar-minus"></i> 26-07-2025
         </span>
@@ -106,7 +109,11 @@
         <span class="weather-item">
           <i class="bi bi-cloud-sun"></i> Clear Sky
         </span>
-        <span class="weather-item"><i class="bi bi-droplet-half"></i> 22%</span>
+        <span class="weather-item"><i class="bi bi-droplet-half"></i> 22% </span>
+
+        <span class="weather-item more-news">
+            More.. 
+        </span>
       </div>
 
       <div class="news-container">
