--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -30,14 +30,14 @@
     </div>
 
     <div class="footer-item item-resources">
-      <div class="footer-item-title">resources</div>
+      <div class="footer-item-title"> learning hub</div>
       <ul class="resources-list">
-        <li><a href="https://sass-lang.com/">Learning - SCSS</a></li>
+        <li><a href="https://sass-lang.com/" target="_blank" rel="noopener"> Learn - SCSS</a></li>
         <li>
-          <a href="https://www.typescriptlang.org/">Learning - TypeScript</a>
+          <a href="https://www.typescriptlang.org/" target="_blank" > Learn - TypeScript</a>
         </li>
-        <li><a href="https://angular.io/">Learning - Angular</a></li>
-        <li><a href="https://javascript.info/">Learning - JavaScript </a></li>
+        <li><a href="https://angular.io/"  target="_blank"> Learn - Angular</a></li>
+        <li><a href="https://javascript.info/"  target="_blank"> Learn - JavaScript </a></li>
       </ul>
     </div>
 
