--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -4,10 +4,10 @@
   <div class="page-description">{{ pageDesc }}</div>
 
   <div class="page-intro-buttons">
-    <button name="projects" class="button projects" type="button">
+    <button name="projects" class="button projects" type="button" (click)="redirectToProjects()">
       projects
     </button>
-    <button name="contact" class="button contact" type="button">
+    <button name="contact" class="button contact" type="button" (click)="redirectToContactUs()">
       contact
     </button>
   </div>
