Added the theme toggle

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="home-page-main" class="home-page-main">
 
-  <div class="homepage-content-section cards-container " (click)=" redirectToProjects() " >
-    <div class="card card-ui">
+  <div class="homepage-content-section cards-container " >
+    <div class="card card-ui" (click)=" redirectToProjects() " >
       <div class="card-icon">
         <i class="bi bi-code-slash"></i>
       </div>
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="card card-api">
+    <div class="card card-api" (click)=" redirectToProjects() " >
       <div class="card-icon">
         <i class="bi bi-plug"></i>
       </div>
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="card card-test">
+    <div class="card card-test" (click)=" redirectToProjects() " >
       <div class="card-icon">
         <i class="bi bi-flask-florence"></i>
       </div>
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="card card-git">
+    <div class="card card-git" (click)=" redirectToProjects() " >
       <div class="card-icon">
         <i class="bi bi-github"></i>
       </div>
