--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -1,12 +1,12 @@
 <div id="site-identity" class="site-identity">
 
-  <div class="site-names" (click)="redirectToHome()">
+  <div class="site-names" >
 
-    <div class="site-logo">
+    <div class="site-logo" (click)="redirectToHome()">
       <img src="./img/site-logo/logo.png" alt="Site Logo" />
     </div>
-    <div class="site-title-and-description">
-      <div class="site-title">
+    <div class="site-title-and-description" (click)="redirectToHome()">
+      <div class="site-title" >
         <div class="title-name"><h1>PORTFOLIO</h1></div>
         <div class="site-theme"><i class="bi bi-circle-half"></i></div>
       </div>
@@ -33,7 +33,7 @@
         </span>
       </div>
 
-      <div class="site-contact-text theme-button">
+      <div class="site-contact-text theme-button" (click)="toggleTheme()">
         <div class="site-theme contact-icon">
           <i class="bi bi-circle-half"></i>
         </div>
