Enabled the theme toglle button for mobile mode

--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -1,24 +1,19 @@
 <div id="site-identity" class="site-identity">
-
-  <div class="site-names" >
-
+  <div class="site-names">
     <div class="site-logo" (click)="redirectToHome()">
       <img src="./img/site-logo/logo.png" alt="Site Logo" />
     </div>
-    <div class="site-title-and-description" (click)="redirectToHome()">
-      <div class="site-title" >
-        <div class="title-name"><h1>PORTFOLIO</h1></div>
-        <div class="site-theme"><i class="bi bi-circle-half"></i></div>
+    <div class="site-title-and-description" >
+      <div class="site-title">
+        <div class="title-name" (click)="redirectToHome()"><h1>PORTFOLIO</h1></div>
+        <div class="site-theme" (click)="toggleTheme()"><i class="bi bi-circle-half"></i></div>
       </div>
-      <p class="site-description"> Front-End Developer (Angular)</p>
+      <p class="site-description" (click)="redirectToHome()">Front-End Developer (Angular)</p>
     </div>
-
   </div>
 
   <div class="site-contact-details">
-    
     <div class="contact-details">
-
       <div class="site-contact-text contact-number">
         <span class="contact-icon"><i class="bi bi-telephone-fill"></i></span>
         <span class="contact-number-text">(+27)79 691 0468 </span>
@@ -38,14 +33,11 @@
           <i class="bi bi-circle-half"></i>
         </div>
       </div>
-
     </div>
 
     <div class="current-weather">
       <div class="weather-icon"><i class="bi bi-cloud-sun-fill"></i></div>
       <div class="weather-text">22°C</div>
     </div>
-
   </div>
-
 </div>
