--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -2,30 +2,30 @@
   <div class="page-content-intro-hr">featured</div>
 
   <section class="project-details">
+
     <div class="top-container">
-      <div class="details-container top-left-details">
+      <div *ngIf="project" class="details-container top-left-details">
         <div class="project-img-container">
           <img
             class="project-img"
-            src="./img/projects/prj-mbg.png"
-            alt="recent project"
+            [src]="'./img/projects/' + project.imageName + '.png'"
+            [alt]="project.imageName"
             title="View Site"
           />
         </div>
         <div class="project-description">
-          <div class="heading project">mabunda group</div>
+          <div class="heading project">{{project.name}}</div>
           <div class="details">
             <p>
-              A business website developed using latest web technologies such as
-              HTML5, SCSS, Bootstrap 5.
+              {{project.introduction}}
             </p>
           </div>
           <div class="project-views">
-            <span class="view git-view" (click)="redirectToGitHubRepo() ">
+            <span class="view git-view" (click)="openHyperLink(project.hyperlinks[0])">
               <i class="bi bi-github"></i>
               GitHub
             </span>
-            <span class="view online-view" (click)="redirectToDemo()">
+            <span class="view online-view" (click)="openHyperLink(project.hyperlinks[1])">
               <i class="bi bi-box-arrow-up-right"></i>
               Online
             </span>
@@ -37,30 +37,30 @@
         <div class="project-description">
           <div class="heading">description</div>
           <div class="details">
-            A business website developed using web technologies SCSS, Angular. A
-            website developed using web technologies HTML5, SCSS, . A business
-            website developed using web technologies HTML5, SCSS, Angular.
+            {{project?.description}}
           </div>
         </div>
       </div>
     </div>
 
-    <div class="bottom-container">
+    <div *ngIf="project"  class="bottom-container">
       <div class="details-container project-concepts">
         <div class="heading">concepts</div>
         <div class="list-container">
           <div class="details">
             <ul>
-              <li><i class="bi bi-lightbulb"></i> Responsive UI</li>
-              <li><i class="bi bi-lightbulb"></i> Angular 16+</li>
-              <li><i class="bi bi-lightbulb"></i> RESTful APIs</li>
+              <li>
+                <i class="bi bi-lightbulb"></i>  {{project.concepts[0]}}
+              </li>
+              <li><i class="bi bi-lightbulb"></i> {{project.concepts[1]}}</li>
+              <li><i class="bi bi-lightbulb"></i> {{project.concepts[2]}}</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-lightbulb"></i> Unit Tests</li>
-              <li><i class="bi bi-lightbulb"></i> SEO (OG)</li>
-              <li><i class="bi bi-lightbulb"></i> GitHub and Git</li>
+              <li><i class="bi bi-lightbulb"></i> {{project.concepts[3]}}</li>
+              <li><i class="bi bi-lightbulb"></i> {{project.concepts[4]}}</li>
+              <li><i class="bi bi-lightbulb"></i> {{project.concepts[5]}}</li>
             </ul>
           </div>
         </div>
@@ -71,17 +71,17 @@
         <div class="list-container">
           <div class="details">
             <ul>
-              <li><i class="bi bi-stop-fill"></i> Rea-time Weather</li>
-              <li><i class="bi bi-stop-fill"></i> Photo Gallery</li>
-              <li><i class="bi bi-stop-fill"></i> Google Maps</li>
+              <li><i class="bi bi-stop-fill"></i>  {{project.features[0]}} </li>
+              <li><i class="bi bi-stop-fill"></i> {{project.features[1]}}</li>
+              <li><i class="bi bi-stop-fill"></i> {{project.features[2]}}</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-stop-fill"></i> Share Buttons</li>
-              <li><i class="bi bi-stop-fill"></i> Contact Form</li>
+              <li><i class="bi bi-stop-fill"></i> {{project.features[3]}}</li>
+              <li><i class="bi bi-stop-fill"></i> {{project.features[4]}}</li>
 
-              <li><i class="bi bi-stop-fill"></i> Toggle Themes</li>
+              <li><i class="bi bi-stop-fill"></i> {{project.features[5]}}</li>
             </ul>
           </div>
         </div>
@@ -91,36 +91,39 @@
 
   <div class="page-content-intro-hr">other projects</div>
 
-  <section class="featured-projects">
-    <div class="project-container prj-1">
-      <div class="project-image-container">
-        <img
-          class="project-img"
-          src="./img/projects/prj-portfolio.png"
-          alt="featured project"
-        />
-      </div>
+    <section *ngIf="projectsList"  class="featured-projects">
 
-      <div class="project-details-container">
-        <div class="project-name">my portfolio</div>
+      <div *ngFor="let project of projectsList"  class="project-container prj-1">
 
-        <div class="project-summary">Personal portfolio</div>
+        <div class="project-image-container">
+          <img
+            class="project-img"
+            [src]="'./img/projects/' + project.imageName + '.png'"
+            alt="featured project"
+            (click)="getProject(project.id)"
+          />
+        </div>
 
-        <div class="project-view-btns">
-          <div class="view-btn git-hub-repo">
-            <i class="bi bi-github"></i> GitHub
-          </div>
-          <div class="view-btn details">
-            <i class="bi bi-bookmark"></i> Details
-          </div>
-          <div class="view-btn live-site">
-            <i class="bi bi-box-arrow-up-right"></i> Online
+        <div class="project-details-container">
+          <div class="project-name">{{project.name}}</div>
+
+          <div class="project-summary">{{project.heading}}</div>
+
+          <div class="project-view-btns">
+            <div class="view-btn git-hub-repo" (click)="openHyperLink(project.hyperlinks[0])">
+              <i class="bi bi-github"></i> GitHub
+            </div>
+            <div class="view-btn details" (click)="getProject(project.id)">
+              <i class="bi bi-bookmark"></i> Details
+            </div>
+            <div class="view-btn live-site" (click)="openHyperLink(project.hyperlinks[1])">
+              <i class="bi bi-box-arrow-up-right"></i> Online
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="project-container prj-2">
+      <!-- <div class="project-container prj-2">
       <div class="project-image-container">
         <img
           class="project-img"
@@ -258,6 +261,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
-</div>
+    </div> -->
+    </section>
+  </div>
